# MorseCodeGenerator

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
include/: App.h  Application.h  EventHandler.h  EventListener.h  EventTypes.h  Gui.h  SoundController.h
include/audio_player/: AudioPlayer.h
include/buffer/: Buffer.h
include/events/: EventDispatcher.h  EventHandler.h  EventListener.h  EventTypes.h  Events.h
include/generator/: Generator.h  MorseCode.h  MorseCodeGenerator.h
include/gui/: Gui.h  GuiImGui.h  GuiOpenGL.h
include/gui/custom_components/: FooterComponent.h  HeaderComponent.h  ImGuiComponent.h  MainComponent.h  MediaPlayer.h  OutputBox.h  Textbox.h
src/: App.cpp  Application.cpp  EventHandler.cpp  EventListener.cpp  Gui.cpp  SoundController.cpp  main.cpp  test.cpp
src/buffer/: Buffer.cpp
src/events/: EventHandler.cpp  EventListener.cpp
src/generator/: MorseCodeGenerator.cpp
src/gui/: Gui.cpp  GuiImGui.cpp  GuiOpenGL.cpp
src/gui/custom_components/: FooterComponent.cpp  HeaderComponent.cpp  MainComponent.cpp  MediaPlayer.cpp  OutboxBox.cpp  OutputBox.cpp  Textbox.cpp
